# rime-kagiroi

./: .gitignore  LICENSE  Makefile  README-zh-hans.md  README.md  default.yaml  kagiroi.dict.yaml  kagiroi.manual.dict.yaml  kagiroi.schema.yaml  kagiroi.yaml  kagiroi_ansikana.dict.yaml  kagiroi_ansikana.schema.yaml  kagiroi_flick.dict.yaml  kagiroi_flick.schema.yaml  kagiroi_kana.dict.yaml  kagiroi_kana.schema.yaml  kagiroi_kanji.dict.yaml  kagiroi_kanji.schema.yaml  kagiroi_kaomoji.dict.yaml  kagiroi_romaji.dict.yaml  kagiroi_romaji.schema.yaml  kagiroi_symbols.dict.yaml  kagiroi_szromaji.dict.yaml  kagiroi_szromaji.schema.yaml  pyproject.toml  recipe.yaml
.github/workflows/: build.yml  test.yml
lua/kagiroi/: kagiroi.lua  kagiroi_dict.lua  kagiroi_flick_speller.lua  kagiroi_kana_speller.lua  kagiroi_translator.lua  kagiroi_viterbi.lua
lua/kagiroi/dic/: lex_manual.csv  (+2 more)
lua/kagiroi/dic.userdb/: 000136.ldb  000137.ldb  000138.ldb  000153.ldb  000154.ldb  000160.ldb  000161.ldb  000162.ldb  000163.ldb  000164.ldb  000165.ldb  000166.ldb  000167.ldb  000168.ldb  000169.ldb  000170.ldb  000172.ldb  000173.ldb  000174.ldb  000175.ldb  000176.ldb  000177.ldb  000178.ldb  000179.ldb  000180.ldb  000182.ldb  000183.ldb  000186.ldb  000187.ldb  000188.ldb  000189.ldb  000190.ldb  000191.ldb  000192.ldb  000193.ldb  000194.ldb  000195.ldb  000197.ldb  000198.ldb  000199.ldb  (+427 more)
opencc/: kagiroi_h2k.txt  kagiroi_matrix.json
tests/: kagiroi.test.yaml
tools/: convert_jisho.py  filter_nico_dictionary.py  gen_segmenter_code_lua.py  generate_matrix_def.py  prefix_suffix_penalty.py
